split project into components
DiscordBot, DND, and MusicStreamer are now logically separated.